<resources>
    <string name="app_name">Contacts Tracer</string>
    <string name="survey_title">COVID\-19 self assessment</string>
    <string name="survey_caption">This resource can help you decide what kind of medical care you might need for COVID\‑19.\n\nLet\'s all look out for each other by knowing our status, trying not to infect others, and reserving care for those in need.</string>
    <string name="start_screening">Start Screening</string>
    <string name="screening_title">COVID\-19 Screening Tool</string>
    <string name="screening_info">You\'ll answer a few questions about symptoms, travel, and contact you’ve had with others.</string>
    <string name="screening_share">Your answers will not be shared with Contacts Tracer or any Public Health Official without your permission.</string>
    <string name="screening_usage">By using this tool, you agree to its terms and that Contacts Tracer will not be liable for any harm relating to your use.</string>
    <string name="screening_recommendation">Recommendations provided by this tool do not constitute medical advice and should not be used to diagnose or treat medical conditions.</string>
    <string name="i_agree">I agree</string>
    <string name="emergency_title">If this is an emergency, stop and call 911</string>
    <string name="emergency_message"> <![CDATA[
    <li>&nbsp;&nbsp;Constant chest pain or pressure</li>\n
    <li>&nbsp;&nbsp;Severe difficulty breathing</li>\n
    <li>&nbsp;&nbsp;Severe shortness of breath</li>\n
    <li>&nbsp;&nbsp;Severe, constant dizziness</li>\n
    <li>&nbsp;&nbsp;Slurred speech</li>\n
    <li>&nbsp;&nbsp;Extreme difficulty waking up</li>\n
    <li>&nbsp;&nbsp;Any other life-threatening symptoms</li>
      ]]>
    </string>
    <string name="recommend_contact_provider_1">Protect yourself and others</string>
    <string name="recommend_contact_provider_2">Monitor symptoms</string>
    <string name="recommend_contact_provider_3">Testing not recommended</string>
    <string name="recommend_contact_provider_4">Refill medications</string>
    <string name="age_question">How old is the person you\'re answering these questions for\?</string>
    <string name="symptoms_question">Do you have any of these symptoms\?</string>
    <string name="select_all_that_apply">Select all that apply</string>
    <string name="healthcare_question">Do you work or volunteer in a healthcare setting, or plan to in the next 2 weeks\?</string>
    <string name="healthcare_question_caption">Such as a hospital\, nursing home\, long\-term care facility, or first\-responder service</string>
    <string name="last_2wks_question">In the last 2 weeks, did you\:</string>
    <string name="care_facility_question">Do you live in a care facility\?</string>
    <string name="care_facility_caption">Nursing home, assisted living or long-term care facility</string>
    <string name="conditions_question">Do you have any of these conditions\?</string>
    <string name="age_question_17_under_answer">Under 18</string>
    <string name="age_question_18_64_answer">Between 18 and 64</string>
    <string name="age_question_65_up_answer">65 or older</string>
    <string name="under_18_title">This tool is intended for people who are at least 18 years old</string>
    <string name="under_18_caption">Visit the CDC site to get information about COVID‑19 and younger people.</string>
    <string name="result_protect_yourself_title">Protect yourself and others by keeping a safe distance</string>
    <string name="result_protect_yourself_caption">Keep 6 feet of space between yourself and others outside of your home</string>
    <string name="result_stay_home_title">Protect yourself and others by staying home</string>
    <string name="result_stay_home_caption">Stay home for 14 days</string>
    <string name="result_contact_provider_title">Contact your occupational healthcare provider</string>
    <string name="result_contact_provider_caption">Tell them about your symptoms and ask about getting tested for COVID\‑19</string>
    <string name="symptom_fever_chills">Fever or chills</string>
    <string name="symptom_diff_breathing">Difficulty breathing</string>
    <string name="symptom_coughing">New or worsening cough</string>
    <string name="symptom_appetite">Sustained loss of smell\, taste\, or appetite</string>
    <string name="symptom_sore_throat">Sore throat</string>
    <string name="symptom_body_aches">Whole body aches</string>
    <string name="symptom_vomiting">Vomiting or diarrhea</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="conditions_lung_disease">Chronic lung disease (Such as COPD, emphysema)</string>
    <string name="conditions_asthma">Asthma (Moderate to severe)</string>
    <string name="conditions_heart">Serious heart condition</string>
    <string name="conditions_diabetes">Diabetes</string>
    <string name="conditions_cough">Weakened ability to cough</string>
    <string name="conditions_immune_system">Weakened immune system</string>
    <string name="conditions_dialysis">Dialysis</string>
    <string name="conditions_liver_disease">Liver disease</string>
    <string name="conditions_pregnancy">Pregnancy</string>
    <string name="conditions_obesity">Severe obesity (Body mass index of 40+)</string>
    <string name="wks_close_contact">Have close contact with someone who has COVID\‑19</string>
    <string name="wks_travel">Travel internationally</string>
    <string name="wks_visit">Live in or visit a place where COVID\‑19 is widespread</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="Ok">OK</string>
    <string name="action_continue">Continue</string>
    <string name="action_help_out">I want to help</string>
    <string name="onboarding_title_1">Do your part and help stop the spread of COVID\-19</string>
    <string name="onboarding_caption_1">Contacts Tracer keeps you and your loved ones safe. We assist you to take the right move in combating COVID\-19 pandemic.</string>
    <string name="onboarding_note">To protect those around you, Public Health Official may also ask you to share your data</string>
    <string name="onboarding_title_2">Assist in the fight against COVID\-19 by turning Bluetooth on</string>
    <string name="onboarding_caption_2">People\-driven tracking and trackers to keep one another safe from those affected by the virus.</string>
    <string name="onboarding_note_2">Your location data stays offline and is shared with a Public Health Official only when there\'s a potential risk.</string>
    <string name="onboarding_permission_title">How Contacts Tracer works</string>
    <string name="onboarding_permission_caption">We use Bluetooth signals to determine if you are near another Contacts Tracer user.\n\nThis proximity data is encrypted and stored locally on your device.</string>
    <string name="login_toolbar_title">Enter Phone number</string>
    <string name="login_caption">We\'ll contact you if you had close encounter with a COVID\-19 case.</string>
    <string name="login_statement"><![CDATA[I agree that a Public Health Official can use this phone number and the collected data in the case of a potential risk factor according to the <a href="%1$s">Terms and Conditions</a> to carry out epidemiological investigation.]]></string>
    <string name="login_verify">Verify</string>
    <string name="login_verification_code">Verification code</string>
    <string name="login_phone_number_sms_sent">We sent a verification code to phone number %s.</string>
    <string name="login_phone_sms_timeout">Verification code will expire in %1$s.</string>
    <string name="login_code_read_automatically">Verification code was automatically filled from the SMS.</string>
    <string name="verify_later_desc">Didn\'t receive a OTP? Start using the application and verify your Phone Number later.</string>
    <string name="verify_later_button">Continue without verifying</string>
    <string name="login_try_again">Check Phone Number</string>
    <string name="consent_warning">You consent with the conditions of data processing is necessary to activate the application. Without your consent, the application cannot work properly.</string>
    <string name="unexpected_error_text">Oops, something went wrong!. Try again later.</string>
    <string name="permission_onboarding_toolbar_title">Permissions</string>
    <string name="menu_item_home">Contacts Tracer</string>
    <string name="menu_item_data">My Data</string>
    <string name="menu_item_assessment">Screening</string>
    <string name="menu_item_delete_data">Delete Data</string>
    <string name="menu_item_help">Help</string>
    <string name="dashboard_title_running">Contacts Tracer is active</string>
    <string name="dashboard_title_paused">Contacts Tracer is inactive</string>
    <string name="dashboard_not_verified_secondary">Please verify your phone number so that we can contact you when there\'s a potential risk.</string>
    <string name="dashboard_secondary">In case you are tested positive, we will contact you using your phone number provided.</string>
    <string name="send_data">Send data?</string>
    <string name="data_sent">Sent</string>
    <string name="please_wait_upload">Data was already sent. You can send it again in %d minutes.</string>
    <string name="my_data_title">My Data</string>
    <string name="my_data_description">This is a list of signal measurements of nearby devices with Contacts Tracer in the past %d days. Data does not contain coordinates nor any other personal data. Data can only be sent to a Public Health Official with your consent.</string>
    <string name="no_data">No Data</string>
    <string name="no_data_caption">@string/battery_opt_my_data</string>
    <string name="notification_title">Contacts Tracer is active</string>
    <string name="notification_title_error">Contacts Tracer is inactive</string>
    <string name="notification_text_bluetooth_disabled">You need to enable Bluetooth to make Contacts Tracer work correctly</string>
    <string name="notification_text_location_disabled">You need to enable Location Services to make Contacts Tracer work correctly</string>
    <string name="notification_text_battery_saver_enabled">You need to disable Battery Saver to make Contacts Tracer work correctly</string>
    <string name="notification_text_paused">Contacts Tracer is inactive. Don\'t forget to reactivate.</string>
    <string name="notification_action_resume">Resume</string>
    <string name="notification_text_resumed">Contacts Tracer is active and anonymously monitoring nearby devices.</string>
    <string name="notification_action_pause">Pause</string>
    <string name="notification_action_enable_bluetooth">Enable Bluetooth</string>
    <string name="notification_action_enable_location">Enable Location Services</string>
    <string name="notification_action_disable_battery_saver">Disable Battery Saver</string>
    <string name="foreground_service_channel">Background service</string>
    <string name="foreground_service_alert_channel">Important notifications</string>
    <string name="enable_bluetooth_button">Enable Bluetooth</string>
    <string name="enable">Enable</string>
    <string name="bt_disabled_title">Enable Bluetooth</string>
    <string name="login_phone_number_input">Phone number</string>
    <string name="login_finish_activation">Continue</string>
    <string name="login_code_input">Verification code</string>
    <string name="login_session_expired">Verification code expired. Check phone number and request a new verification code.</string>
    <string name="delete_data">Delete data?</string>
    <string name="data_description">About Data</string>
</resources>