<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_send_data"
        android:icon="@drawable/ic_send_24px"
        android:title="@string/delete_data"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_delete_data"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_item_delete_data"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/data_description"
        android:icon="@drawable/ic_info"
        android:title="@string/data_description"
        android:visible="true"
        app:showAsAction="never" />
</menu>