<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/grid_3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/grid_3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animated_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/guideline_mid"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/covid19" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/result_contact_provider_title"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/animated_view" />

        <TextView
            android:id="@+id/text_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_2"
            android:text="@string/result_contact_provider_caption"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/recommendation_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_5"
            android:drawableStart="@drawable/ic_pan_tool_24px"
            android:drawablePadding="@dimen/grid_2"
            android:text="@string/recommend_contact_provider_1"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/text_info" />

        <TextView
            android:id="@+id/recommendation_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_4"
            android:drawableStart="@drawable/ic_assessment_24px"
            android:drawablePadding="@dimen/grid_2"
            android:text="@string/recommend_contact_provider_2"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:drawableTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/recommendation_1" />

        <TextView
            android:id="@+id/recommendation_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_4"
            android:drawableStart="@drawable/ic_block_24px"
            android:drawablePadding="@dimen/grid_2"
            android:text="@string/recommend_contact_provider_3"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:drawableTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/recommendation_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_6"
            android:padding="@dimen/grid_2"
            android:text="@string/Ok"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/recommendation_3"
            app:shapeAppearanceOverlay="?attr/shapeAppearanceSmallComponent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
